--- a/designer_qiu_qiu.ui
+++ b/designer_qiu_qiu.ui
@@ -816,7 +816,7 @@
      <string>Dig. Voltage</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_5">
+   <widget class="QPushButton" name="all_voltages">
     <property name="geometry">
      <rect>
       <x>920</x>
@@ -848,6 +848,9 @@
       <height>25</height>
      </rect>
     </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+    </property>
    </widget>
    <widget class="QLineEdit" name="usb_line">
     <property name="geometry">
@@ -858,6 +861,9 @@
       <height>25</height>
      </rect>
     </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+    </property>
    </widget>
    <widget class="QLineEdit" name="dig_line">
     <property name="geometry">
@@ -867,6 +873,9 @@
       <width>61</width>
       <height>25</height>
      </rect>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
    </widget>
    <widget class="QFrame" name="frame_5">
@@ -885,6 +894,459 @@
      <enum>QFrame::Raised</enum>
     </property>
    </widget>
+   <widget class="QTableWidget" name="flash_table">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>270</y>
+      <width>931</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="baseSize">
+     <size>
+      <width>3</width>
+      <height>3</height>
+     </size>
+    </property>
+    <property name="lineWidth">
+     <number>3</number>
+    </property>
+    <property name="dragDropOverwriteMode">
+     <bool>true</bool>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>0</width>
+      <height>0</height>
+     </size>
+    </property>
+    <property name="rowCount">
+     <number>1</number>
+    </property>
+    <property name="columnCount">
+     <number>32</number>
+    </property>
+    <attribute name="horizontalHeaderVisible">
+     <bool>false</bool>
+    </attribute>
+    <attribute name="verticalHeaderVisible">
+     <bool>false</bool>
+    </attribute>
+    <row/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <column/>
+    <item row="0" column="0">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="1">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="2">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="3">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="4">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="5">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="6">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="7">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="8">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="9">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="10">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="11">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="12">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="13">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="14">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="15">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="16">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="17">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="18">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="19">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="20">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="21">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="22">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="23">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="24">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="25">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="26">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="27">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="28">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="29">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="30">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+    <item row="0" column="31">
+     <property name="text">
+      <string>DD</string>
+     </property>
+    </item>
+   </widget>
+   <widget class="QWidget" name="layoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>230</y>
+      <width>701</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <widget class="QLabel" name="label_10">
+       <property name="text">
+        <string>Sector</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QSpinBox" name="sector_spin">
+       <property name="maximum">
+        <number>10000</number>
+       </property>
+       <property name="value">
+        <number>8112</number>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer_5">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>28</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_11">
+       <property name="text">
+        <string>Part</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QSpinBox" name="part_spin">
+       <property name="maximum">
+        <number>127</number>
+       </property>
+       <property name="value">
+        <number>3</number>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer_4">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>28</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_3">
+       <property name="text">
+        <string>Fill</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>28</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_2">
+       <property name="text">
+        <string>WritePart</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>28</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton">
+       <property name="text">
+        <string>Read Part</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer_3">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>28</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_4">
+       <property name="text">
+        <string>Erase Sector</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QFrame" name="frame_6">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>220</y>
+      <width>951</width>
+      <height>101</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_5">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>260</y>
+      <width>111</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Start Measure</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_6">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>290</y>
+      <width>111</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Stop Measure</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="comboBox">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>230</y>
+      <width>111</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <item>
+     <property name="text">
+      <string>ADC</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Emulator</string>
+     </property>
+    </item>
+   </widget>
+   <widget class="QFrame" name="frame_7">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>220</y>
+      <width>131</width>
+      <height>101</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+   </widget>
+   <zorder>frame_7</zorder>
+   <zorder>frame_6</zorder>
+   <zorder>layoutWidget</zorder>
    <zorder>frame_5</zorder>
    <zorder>frame</zorder>
    <zorder>frame_4</zorder>
@@ -908,11 +1370,15 @@
    <zorder>accu_voltage</zorder>
    <zorder>usb_voltage</zorder>
    <zorder>digital_voltage</zorder>
-   <zorder>pushButton_5</zorder>
+   <zorder>all_voltages</zorder>
    <zorder>charge_line</zorder>
    <zorder>accu_line</zorder>
    <zorder>usb_line</zorder>
    <zorder>dig_line</zorder>
+   <zorder>flash_table</zorder>
+   <zorder>pushButton_5</zorder>
+   <zorder>pushButton_6</zorder>
+   <zorder>comboBox</zorder>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
